# TechnicalRadiation

./: .gitignore  CMakeLists.txt  README.md  Startup.cs  TechnicalRadiation.csproj
Models/: CategoryDto.cs  Models.csproj  TechnicalRadiation.Models.csproj
Models/DTO/: AuthorDetailDto.cs  AuthorDto.cs  CategoryDetailDto.cs  CategoryDto.cs  NewsItemDetailDto.cs  NewsItemDetailsDto.cs  NewsItemDto.cs
Models/Entities/: Author.cs  AuthorNewsItemRelation.cs  Category.cs  NewsItem.cs  NewsItemAuthors.cs  NewsItemCategories.cs  NewsItemCategoryRelation.cs
Models/Exceptions/: AuthorizationException.cs  ExceptionModel.cs  InputFormatException.cs  ResourceNotFoundException.cs
Models/HyperMedia/: HypermediaLink.cs
Models/InputModels/: AuthorInputModel.cs  CategoryInputModel.cs  NewsItemInputModel.cs
Repositories/: AuthorRepositories.cs  CategoryRepositories.cs  NewsItemRepository.cs  NewsItemsRepositories.cs  Repositories.csproj  TechnicalRadiation.Repositories.csproj
Repositories/Data/: DataProvider.cs
Services/: AuthorService.cs  CategoryService.cs  NewsItemService.cs  Services.csproj  TechnicalRadiation.Services.csproj
WebApi/: TechnicalRadiation.WebApi.csproj
WebApi/Attributes/: AuthorizeBearerAttribute.cs
WebApi/Controllers/: AutherController.cs  CategeryController.cs  Controller.cs  NewsItemController.cs
WebApi/Mappings/: MappingPro.cs
